readme and test

--- a/find-the-odd-number/index.html
+++ b/find-the-odd-number/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find the odd int</title>
   </head>
-  <body></body>
+  <body>
+
+  <script src="solution.js"></script>
+  </body>
 </html>
